@@ -1,11 +1,9 @@
                        Term::ANSIColor version 3.02
               (A simple ANSI text attribute control module)
 
-  Copyright 1996, 1997, 1998, 2000, 2001, 2002, 2005, 2006, 2007, 2009,
-  2010, 2011, 2012 Russ Allbery <rra@stanford.edu>.  Copyright 1996 Zenin.
-  Copyright 2012 Kurt Starsinic <kstarsinic@gmail.com>.  This program is
-  free software; you may redistribute it and/or modify it under the same
-  terms as Perl itself.
+  This program is free software; you may redistribute it and/or modify it
+  under the same terms as Perl itself.  Please see the section LICENSE
+  below for more information.
 
   I welcome bug reports and patches for this package at rra@stanford.edu
   or via the CPAN bug tracker at <http://rt.cpan.org/>.  However, please
@@ -202,3 +200,31 @@ THANKS
   support.
 
   To Larry Wall, as always, for Perl.
+
+LICENSE
+
+  The Term-ANSIColor distribution as a whole is covered by the following
+  copyright statement and license:
+
+    Copyright 1996 Zenin
+    Copyright 1996, 1997, 1998, 2000, 2001, 2002, 2005, 2006, 2008, 2009,
+        2010, 2011, 2012 Russ Allbery <rra@stanford.edu>
+    Copyright 2012 Kurt Starsinic <kstarsinic@gmail.com>
+
+    This program is free software; you may redistribute it and/or modify
+    it under the same terms as Perl itself.  This means that you may
+    choose between the two licenses that Perl is released under: the GNU
+    GPL and the Artistic License.  Please see your Perl distribution for
+    the details and copies of the licenses.
+
+    PUSH/POP support submitted 2007 by openmethods.com voice solutions
+
+  All individual files without an explicit exception below are released
+  under this license.  Some files may have additional copyright holders as
+  noted in those files.  There is detailed information about the licensing
+  of each file in the LICENSE file in this distribution.
+
+  Some files in this distribution are individually released under
+  different licenses, all of which are compatible with the above general
+  package license but which may require preservation of additional
+  notices.  All required notices are preserved in the LICENSE file.
