@@ -1,5 +1,7 @@
 2012-12-30  Russ Allbery  <rra@stanford.edu>
 
+	* LICENSE: New file summarizing copyright and license information.
+
 	* examples/generate-colors: Add support for "basic" and "bright"
 	test file types that test all the other supported attributes.
 	* tests/README: Remove VT100 test files.  The license was unclear,
